# funalone

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
funalone/: __init__.py  default_mocking_context.py  isolated_function_clone.py  main.py  mock_context.py  namespaced_function.py  test.py  types.py
test/: declarative_test_case.py  test_default_mocking_context.py  test_isolated_function_clone.py  test_namespaced_function.py  utils.py
