[tool.poetry]
name = "funalone"
version = "0.5.1"
description = "Unittest functions isolated."
authors = ["Borja Martinena"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/aafrecct/funalone"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
coverage = "^7.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
